--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
-if(COMMAND cmake_policy)
-	cmake_policy(SET CMP0003 NEW)
-endif(COMMAND cmake_policy)
+if (COMMAND cmake_policy)
+    cmake_policy(SET CMP0003 NEW)
+endif (COMMAND cmake_policy)
 
 project(CNPY)
 
@@ -11,20 +11,48 @@ option(ENABLE_STATIC "Build static (.a) library" ON)
 
 find_package(ZLIB REQUIRED)
 
-include_directories(${ZLIB_INCLUDE_DIRS})
 
-add_library(cnpy SHARED "cnpy.cpp")
+add_library(cnpy SHARED cnpy.cpp)
+target_include_directories(cnpy PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        ${ZLIB_INCLUDE_DIRS}
+        $<INSTALL_INTERFACE:include>)
+set_target_properties(cnpy PROPERTIES PUBLIC_HEADER include/cnpy/cnpy.h)
 target_link_libraries(cnpy ${ZLIB_LIBRARIES})
-install(TARGETS "cnpy" LIBRARY DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-
-if(ENABLE_STATIC)
-    add_library(cnpy-static STATIC "cnpy.cpp")
-    set_target_properties(cnpy-static PROPERTIES OUTPUT_NAME "cnpy")
-    install(TARGETS "cnpy-static" ARCHIVE DESTINATION lib)
-endif(ENABLE_STATIC)
-
-install(FILES "cnpy.h" DESTINATION include)
-install(FILES "mat2npz" "npy2mat" "npz2mat" DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
 add_executable(example1 example1.cpp)
 target_link_libraries(example1 cnpy)
+
+install(TARGETS cnpy EXPORT cnpyTargets
+        LIBRARY DESTINATION lib
+        PUBLIC_HEADER DESTINATION include/cnpy)
+
+install(FILES mat2npz npy2mat npz2mat DESTINATION bin)
+
+set(ConfigPackageLocation lib/cmake/cnpy)
+
+export(EXPORT cnpyTargets
+        FILE "${CMAKE_CURRENT_BINARY_DIR}/cnpy/cnpyTargets.cmake"
+        NAMESPACE cnpy::
+        )
+
+configure_file(cmake/cnpy-config.cmake
+        "${CMAKE_CURRENT_BINARY_DIR}/cnpy-config.cmake"
+        COPYONLY
+        )
+
+install(EXPORT cnpyTargets
+        FILE
+        cnpy-targets.cmake
+        NAMESPACE
+        cnpy::
+        DESTINATION
+        ${ConfigPackageLocation}
+        )
+
+install(
+        FILES
+        cmake/cnpy-config.cmake
+        DESTINATION
+        ${ConfigPackageLocation}
+)
